# phash

./: .gitignore  CMakeLists.txt  README.md
bindings/: CMakeLists.txt
bindings/java/phash-jni/: pom.xml
examples/: imghash.cpp
src/: audiophash.cpp  audiophash.h  audiophash.h.cmake  bmbhash.cpp  cimgffmpeg.h  pHash.cpp  pHash.h  pHash.h.cmake  ph_fft.c  ph_fft.h
tests/: audiohash-compare-test.cpp  audiohash-readaudio-test.cpp  dct-imagehash-test.cpp  fft-test.c
